tests/NormalTests/paczka1/fuzzy1/40150672.err
Error in line 1: RDharMt A632 68,4
Error in line 23: KM0QUEK A632 80,3
Error in line 19: x4n9k S324 34,0
